--- a/README
+++ b/README
@@ -41,7 +41,7 @@ agreement (copyright.txt).
 The original project was developed at UC Davis (formerly housed at
 http://casil.ucdavis.edu/projects/starspan/). The project is being moved
 to github, unfortunately without any of the CVS history. It is currently 
-being maintained by `perrygeo` with limited funding from Ecotrust.
+being maintained by `perrygeo` with support from Ecotrust.
 
-Documentation, as you may notice, is very lacking. We hope to remedy this 
+Documentation, as you may notice, is very lacking. I hope to remedy this 
 in the future. Please bear with us as we make the transition.
